--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -7,21 +7,36 @@
     </head>
 
 <body>
+
     <h1>Rango says...</h1> 
     <div>
         hey there partner! <br />    
         <strong>{{ boldmessage }}</strong>
     </div>
     <div>
+<h2> Most Liked Categories </h2>
     {% if categories %}
         <ul>
         {% for category in categories %}
-            <li>{{ category.name }}</li> 
+            <li><a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a></li>
         {% endfor %}
         </ul> 
     {% else %}
         <strong>There are no categories present.</strong> 
     {% endif %}
+<h2> Most Viewed Pages </h2>
+	
+	{% if page %}
+	<ul>
+		{% for page in page %}
+			<li>
+			<a href="{{ page.url }}">{{ page.title }}</a>
+			</li>
+		{% endfor %}
+	</ul>
+	{% else %}
+		<strong>There are no pages present.</strong>
+	{% endif %}
     </div>
 
     <div>
