--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -19,9 +19,11 @@
         {% else %}
             The specified category does not exist.
 {% endif %}
-<a href="/rango/index/">Index</a><br />
-
 </div> 
+<div>
+<a href="/rango/index/">Index</a><br />
+</div>
+
 </body>
 </html>
 
