--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -13,8 +13,10 @@
         hey there partner! <br />    
         <strong>{{ boldmessage }}</strong>
     </div>
+
+<h2>Most Liked Categories</h2>
     <div>
-<h2> Most Liked Categories </h2>
+
     {% if categories %}
         <ul>
         {% for category in categories %}
@@ -24,8 +26,10 @@
     {% else %}
         <strong>There are no categories present.</strong> 
     {% endif %}
-<h2> Most Viewed Pages </h2>
-	
+  </div>
+
+<h2>Most Viewed Pages</h2>
+	<div>
 	{% if page %}
 	<ul>
 		{% for page in page %}
@@ -37,6 +41,7 @@
 	{% else %}
 		<strong>There are no pages present.</strong>
 	{% endif %}
+
     </div>
 
     <div>
