--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -30,9 +30,9 @@
 
 <h2>Most Viewed Pages</h2>
 	<div>
-	{% if page %}
+	{% if pages %}
 	<ul>
-		{% for page in page %}
+		{% for page in pages %}
 			<li>
 			<a href="{{ page.url }}">{{ page.title }}</a>
 			</li>
@@ -46,6 +46,7 @@
 
     <div>
         <a href="/rango/about/">About Rango</a><br /> 
+        <a href="/rango/add_category/">Add a New Category</a><br/>
         <img src="{% static "images/rango.jpg" %}"
              alt="Picture of Rango" />
         </div> 
