--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,11 +1,7 @@
 {% extends 'rango/base.html' %} 
 {% load staticfiles %}
 {% block title_block %} 
-{% if category %}
-        {{ category.name }}
-    {% else %}
-        Unknown Category
-    {% endif %}
+{{ category.name }}
 {% endblock %}
 {% block body_block %}
 {% if category %}
@@ -19,7 +15,7 @@
 {% else %}
 <strong>No pages currently in category.</strong> 
 {% endif %}
-<a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br /> 
+<a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a> <br/>
 {% else %}
 The specified category does not exist.
 {% endif %}
