Chapter 8 almost done

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,21 +1,16 @@
-<!DOCTYPE html>
-{% load staticfiles %} <!-- New line -->
-<html>
+{% extends 'rango/base.html' %}	
+{% load staticfiles %}
+ <head> <title>About Rango</title>
+</head>
+{% block title_block %}
 
-    <head> 
-        <title>Rango</title>
-    </head>
+	About Rango
+{% endblock %}
 
-<body>
-    <h1>Rango says...</h1> 
-    <div>
-        here is the about page.<br />
+{% block body_block %}
+<h1><title>About Rango</title></h1>
+        Here is the about page.<br />
         <strong>{{ boldmessage }}</strong><br /> 
-    </div>
-    <div>
-        <a href="/rango/index/">Index</a><br />
         <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
         <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat." />
-        </div> 
-    </body>
-</html>
+{% endblock %}
