--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,12 +1,14 @@
-<!DOCTYPEhtml>
-<html> 
-<head>
-<title>Rango</title> 
+{% extends 'rango/base.html' %}	
+{% load staticfiles %}
+	<head>
+  <title>{% block title_block %}Add a dddCategory{% endblock %}</title>
 </head>
 
-<body>
+	 
+
+
+{% block body_block %}
 <h1>Add a Category</h1> 
-<div>
 <form id="category_form" method="post" action="/rango/add_category/"> 
 {% csrf_token %}
 {% for hidden in form.hidden_fields %}
@@ -19,9 +21,7 @@
 {% endfor %}
 <input type="submit" name="submit" value="Create Category" />
 </form>
-</div> 
-<div>
-<a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a> <br/>
-</div> 
-</body>
-</html>
+ 
+{% endblock %}
+
+
