--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,8 +1,7 @@
 {% extends 'rango/base.html' %}	
 {% load staticfiles %}
-	<head>
-  <title>{% block title_block %}Add a dddCategory{% endblock %}</title>
-</head>
+{% block title_block %}Add a Category{% endblock %}
+	 
 
 	 
 
