--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -2,8 +2,17 @@
 {% load staticfiles %}
 
 {% block title_block %} 
+{% if category %}
 {{ category.name }}
+{% else %}
+Unknown Category
+{% endif %}
 {% endblock %}
+
+
+
+
+
 {% block body_block %}
 {% if category %}
 <h1>{{ category.name }}</h1> 
