--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,10 +1,8 @@
 {% extends 'rango/base.html' %}	
 {% load staticfiles %}
-	<head>
-  <title>Homepage</title>
-</head>
-{% block title_block %}
 
+{% block title_block %}
+Homepage
 {% endblock %}
 
 {% block body_block %}
