--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,10 +1,12 @@
 <!DOCTYPEhtml>
 {% load staticfiles %}
 {% load rango_template_tags %}
-<html> <head>
-<title> Rango -
-            {% block title_block %}
-               How to Tango with Django!
+<html> 
+<head>
+<title> 
+Rango -
+{% block title_block %}
+How to Tango with Django!
 {% endblock %} </title>
 </head> 
 <body>
@@ -13,21 +15,12 @@
 {% block body_block %} 
 {% endblock %}
 </div>
-
-<div>
- 
-{% block sidebar_block %}
-        {% get_category_list category %}
-    {% endblock %}
-
-
-</div>
 <hr />
 <div>
 <ul>
 {% if user.is_authenticated %}
-<!-- Show these links when the user is logged in -->
 <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li> 
+
 <li><a href="{% url 'rango:restricted' %}">Restricted Page</a></li>
 <li><a href="{% url 'rango:logout' %}">Logout</a></li> 
 
@@ -40,7 +33,17 @@
 
 <li><a href="{% url 'rango:about' %}">About</a></li>
 <li><a href="{% url 'rango:index' %}">Index</a></li>
+ 
 </ul>
+
+
+</div>
+ 
+<div>
+{% block sidebar_block %}
+        {% get_category_list category %}
+    {% endblock %}
+
 </div>
 </body>
 </html>
