--- a/templates/rango/register.html
+++ b/templates/rango/register.html
@@ -6,7 +6,7 @@ Register
 {% block body_block %}
 <h1>Register for Rango</h1>
 {% if registered %} 
-<a href="{% url 'index' %}">Return to the homepage.</a><br />
+<a href="{% url 'rango:index' %}">Return to the homepage.</a><br />
 Rango says: <strong>thank you for registering!</strong> 
 
 {% else %}
